[package]
name = "libp2p-comit"
version = "0.1.0"
authors = ["CoBloX developers <team@coblox.tech>"]
edition = "2018"
description = "Implementation of the COMIT messaging protocol"

[dependencies]
bytes = "0.5"
derivative = "2"
futures = { version = "0.3", features = ["alloc", "io-compat"] }
futures_codec = "0.4"
libp2p = { git = "https://github.com/libp2p/rust-libp2p/", rev = "0d3e4f2", default-features = false }
#libp2p = { version = "0.16", default-features = false }
# Add all these crates separately because we are depeneding on unreleased libp2p above.
libp2p-dns = { version = "0.16", default-features = false }
libp2p-mplex = { version = "0.16", default-features = false }
libp2p-mdns = { version = "0.16", default-features = false }
libp2p-secio = { version = "0.16", default-features = false }
libp2p-tcp = { version = "0.16", default-features = false }
libp2p-yamux = { version = "0.16", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.18"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
spectral = "0.6"
